# LifetimeMeasurementTool

./: .gitignore  CMakeLists.txt  LifetimeConventions.cxx  LifetimeConventions.h  LinkDef.h  Makefile  README.md  RawDigitiser.cxx  RawDigitiser.h  UsefulFunctions.cxx  UsefulFunctions.h  calculateLifetimeWithDigitiser.cxx  calculateLifetimeWithScope.cxx  decodeEvent.cxx  dict.cxx  env.sh  findAllAverages.cxx  findAllAveragesDigitiser.cxx  findFilteredAverages.cxx  findTauElec.cxx  keepUpWithDecoding.sh  keepUpWithFilteredAverages.sh  keepUpWithPurity.sh  lookAtCathodeOnly.cxx  makeElogEntry.cxx  makeFFTs.cxx  makeNiceTree.cxx  makeTGraphs.cxx  recalculateFilters.sh  recalculatedPurity.sh  resizeAllRawAverages.sh  resizeRawAverages.cxx
doc/: doxygen.config
macros/: checkGridTransparency.C  findPreampGain.C  findPreampGainFiltered.C  findPreampGain_Fit.C  getLifetimeFromCathode.C  getPhotodiodeVsTime.C  getPhotodiodeVsTime_oneFile.C  makePlotsVsTime.C  overlayFFTs.C  overlayTwoRuns.C  plotCathodeVSfield.C  plotRMS.C  quickPlotAverages.C  quickSubtract.C  subtractBaseline.C
